fixed up some stlying which cause an issue on smaller screen sizes.

--- a/src/Components/Wordentry/WordEntry.css
+++ b/src/Components/Wordentry/WordEntry.css
@@ -1,29 +1,44 @@
 .wordInput {
-  position: fixed;
-  margin-top: 125px;
-  width: 80%;
-  left: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 10%;
+  width: 90%;
   text-align: center;
+  margin: 10% 2%;
 }
 
 .wordInput input {
-  padding: 10px 10px;
-  margin-left: auto;
   width: 50%;
   text-align: center;
   color: coral;
   font-size: 16px;
 }
 
+form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wordSize {
+  display: flex;
+  flex-direction: row;
+}
+
 .wordInput p {
-  padding: 10px 65px;
+  padding: 1% 25%;
   text-align: center;
   font-weight: 900;
   font-size: 24px;
 }
 
 .wordInput button {
-  margin: 10px;
+  margin: 2%;
+  width: 25%;
+  height: 20%;
+  justify-content: center;
 }
 
 .wordList ul {
